--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,18 @@
-spring.r2dbc.url=r2dbc:mssql://erasmus-db:1433;database=erasmus
+# Database
+DB_PORT=1433
+DB_HOST=localhost
+DB_NAME=erasmus
+
+# R2DBC setup
+spring.r2dbc.url=r2dbc:mssql://${DB_HOST}:${DB_PORT};database=${DB_NAME}
 spring.r2dbc.username=sa
 spring.r2dbc.password=Q1W2e3r4
 spring.main.web-application-type=reactive
 
+# Liquibase setup
 spring.liquibase.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-spring.liquibase.url=jdbc:sqlserver://erasmus-db:1433;database=erasmus
+spring.liquibase.url=jdbc:sqlserver://${DB_HOST}:${DB_PORT};database=${DB_NAME}
 spring.liquibase.user=sa
 spring.liquibase.password=Q1W2e3r4
 
