Add list universities names endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ DB_HOST=localhost
 DB_NAME=erasmus
 
 # R2DBC setup
-spring.r2dbc.url=r2dbc:mssql://${DB_HOST}:${DB_PORT};database=${DB_NAME}
+spring.r2dbc.url=r2dbc:pool:mssql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.r2dbc.username=sa
 spring.r2dbc.password=Q1W2e3r4
 spring.main.web-application-type=reactive
@@ -17,5 +17,3 @@ spring.liquibase.user=sa
 spring.liquibase.password=Q1W2e3r4
 
 springdoc.swagger-ui.path=/documentation.html
-
-
