--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,12 @@ DB_PORT=1433
 DB_HOST=localhost
 DB_NAME=erasmus
 
+PROJECT_JWT_ISSUER=project
+PROJECT_JWT_SECRET=my-incredibly-strong-and-secure-secret
+
+project.jwt.issuer=${PROJECT_JWT_ISSUER}
+project.jwt.secret=${PROJECT_JWT_SECRET}
+
 # R2DBC setup
 spring.r2dbc.url=r2dbc:pool:mssql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.r2dbc.username=sa
