--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,3 +7,7 @@ spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 spring.liquibase.url=jdbc:h2:mem:erasmus;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.liquibase.user=sa
 spring.liquibase.password=Q1W2e3r4
+
+project.jwt.issuer=dummy-issuer
+project.jwt.secret=my-incredibly-strong-and-secure-secret
+project.login.googleClientId=dummy-google-id
