--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 # Database
+DB_USER=user
+DB_PASSWORD=password
+DB_HOST=host
 DB_PORT=1433
-DB_HOST=localhost
-DB_NAME=erapulus
+DB_NAME=name-db
 
 ERAPULUS_JWT_ISSUER=erapulus
 ERAPULUS_JWT_SECRET=my-incredibly-strong-and-secure-secret
@@ -13,15 +15,13 @@ project.login.googleClientId=${ERAPULUS_GOOGLE_CLIENT_ID}
 
 # R2DBC setup
 spring.r2dbc.url=r2dbc:pool:mssql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.r2dbc.username=sa
-spring.r2dbc.password=Q1W2e3r4
+spring.r2dbc.username=${DB_USER}
+spring.r2dbc.password=${DB_PASSWORD}
 spring.main.web-application-type=reactive
 
 # Liquibase setup
 spring.liquibase.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-spring.liquibase.url=jdbc:sqlserver://${DB_HOST}:${DB_PORT};database=${DB_NAME}
-spring.liquibase.user=sa
-spring.liquibase.password=Q1W2e3r4
+spring.liquibase.url=jdbc:sqlserver://${DB_HOST}:${DB_PORT};database=${DB_NAME};user=${DB_USER};password=${DB_PASSWORD};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 
 springdoc.swagger-ui.path=/documentation.html
