--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,19 @@
 # Database
-DB_USER=user
-DB_PASSWORD=password
-DB_HOST=host
+DB_USER=sa
+DB_PASSWORD=Q1W2e3r4
+DB_HOST=localhost
 DB_PORT=1433
-DB_NAME=name-db
+DB_NAME=erapulus
 
 ERAPULUS_JWT_ISSUER=erapulus
 ERAPULUS_JWT_SECRET=my-incredibly-strong-and-secure-secret
 ERAPULUS_GOOGLE_CLIENT_ID=dummy-client-id
+SERVER_PORT=8080
 
 project.jwt.issuer=${ERAPULUS_JWT_ISSUER}
 project.jwt.secret=${ERAPULES_JWT_SECRET}
 project.login.googleClientId=${ERAPULUS_GOOGLE_CLIENT_ID}
+server.port=${SERVER_PORT}
 
 # R2DBC setup
 spring.r2dbc.url=r2dbc:pool:mssql://${DB_HOST}:${DB_PORT}/${DB_NAME}
@@ -22,6 +24,6 @@ spring.main.web-application-type=reactive
 # Liquibase setup
 spring.liquibase.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-spring.liquibase.url=jdbc:sqlserver://${DB_HOST}:${DB_PORT};database=${DB_NAME};user=${DB_USER};password=${DB_PASSWORD};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.liquibase.url=jdbc:sqlserver://${DB_HOST}:${DB_PORT};database=${DB_NAME};user=${DB_USER};password=${DB_PASSWORD}
 
 springdoc.swagger-ui.path=/documentation.html
