Fix login endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ DB_USER=sa
 DB_PASSWORD=Q1W2e3r4
 DB_HOST=localhost
 DB_PORT=1433
-DB_NAME=erapulus
+DB_NAME=erapulus-db
 
 ERAPULUS_JWT_ISSUER=erapulus
 ERAPULUS_JWT_SECRET=my-incredibly-strong-and-secure-secret
@@ -11,7 +11,7 @@ ERAPULUS_GOOGLE_CLIENT_ID=dummy-client-id
 SERVER_PORT=8080
 
 project.jwt.issuer=${ERAPULUS_JWT_ISSUER}
-project.jwt.secret=${ERAPULES_JWT_SECRET}
+project.jwt.secret=${ERAPULUS_JWT_SECRET}
 project.login.googleClientId=${ERAPULUS_GOOGLE_CLIENT_ID}
 server.port=${SERVER_PORT}
 
