Add register routes and default user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Application properties
+SERVER_PORT=8080
+
 # Database
 DB_USER=sa
 DB_PASSWORD=Q1W2e3r4
@@ -5,14 +8,20 @@ DB_HOST=localhost
 DB_PORT=1433
 DB_NAME=erapulus-db
 
+# JWT
 ERAPULUS_JWT_ISSUER=erapulus
 ERAPULUS_JWT_SECRET=my-incredibly-strong-and-secure-secret
 ERAPULUS_GOOGLE_CLIENT_ID=dummy-client-id
-SERVER_PORT=8080
 
-project.jwt.issuer=${ERAPULUS_JWT_ISSUER}
-project.jwt.secret=${ERAPULUS_JWT_SECRET}
-project.login.googleClientId=${ERAPULUS_GOOGLE_CLIENT_ID}
+# Administrator data
+ADMIN_FIRST_NAME=John
+ADMIN_LAST_NAME=Smith
+ADMIN_EMAIL=example@gmail.com
+ADMIN_PASSWORD=pass
+
+
+
+# Application properties
 server.port=${SERVER_PORT}
 
 # R2DBC setup
@@ -26,4 +35,16 @@ spring.liquibase.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 spring.liquibase.url=jdbc:sqlserver://${DB_HOST}:${DB_PORT};database=${DB_NAME};user=${DB_USER};password=${DB_PASSWORD}
 
+# JWT
+erapulus.jwt.issuer=${ERAPULUS_JWT_ISSUER}
+erapulus.jwt.secret=${ERAPULUS_JWT_SECRET}
+erapulus.login.googleClientId=${ERAPULUS_GOOGLE_CLIENT_ID}
+
+# Administrator data
+erapulus.administrator.firstName=${ADMIN_FIRST_NAME}
+erapulus.administrator.lastName=${ADMIN_LAST_NAME}
+erapulus.administrator.email=${ADMIN_EMAIL}
+erapulus.administrator.password=${ADMIN_PASSWORD}
+
+# Swagger documentation
 springdoc.swagger-ui.path=/documentation.html
