--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,6 +8,10 @@ spring.liquibase.url=jdbc:h2:mem:erasmus;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALS
 spring.liquibase.user=sa
 spring.liquibase.password=Q1W2e3r4
 
-project.jwt.issuer=dummy-issuer
-project.jwt.secret=my-incredibly-strong-and-secure-secret
-project.login.googleClientId=dummy-google-id
+erapulus.jwt.issuer=dummy-issuer
+erapulus.jwt.secret=my-incredibly-strong-and-secure-secret
+erapulus.login.googleClientId=dummy-google-id
+erapulus.administrator.firstName=firstName
+erapulus.administrator.lastName=lastName
+erapulus.administrator.email=example@gmail.com
+erapulus.administrator.password=Q1W2e3r4
