Add uploading files

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -15,3 +15,6 @@ erapulus.administrator.firstName=firstName
 erapulus.administrator.lastName=lastName
 erapulus.administrator.email=example@gmail.com
 erapulus.administrator.password=Q1W2e3r4
+azure.storage.account-name=example
+azure.storage.account-key=secret-key
+azure.storage.container-name=example
