--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>com.azure.spring</groupId>
+            <artifactId>azure-spring-boot-starter-storage</artifactId>
+            <version>3.11.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
