--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,12 +13,16 @@ ERAPULUS_JWT_ISSUER=erapulus
 ERAPULUS_JWT_SECRET=my-incredibly-strong-and-secure-secret
 ERAPULUS_GOOGLE_CLIENT_ID=dummy-client-id
 
+# Azure Storage
+AZURE_ACCOUNT_NAME=account-name
+AZURE_ACCOUNT_KEY=secret-key
+AZURE_CONTAINER_NAME=example
+
 # Administrator data
 ADMIN_FIRST_NAME=John
 ADMIN_LAST_NAME=Smith
 ADMIN_EMAIL=example@gmail.com
 ADMIN_PASSWORD=pass
-
 
 
 # Application properties
@@ -39,6 +43,11 @@ spring.liquibase.url=jdbc:sqlserver://${DB_HOST}:${DB_PORT};database=${DB_NAME};
 erapulus.jwt.issuer=${ERAPULUS_JWT_ISSUER}
 erapulus.jwt.secret=${ERAPULUS_JWT_SECRET}
 erapulus.login.googleClientId=${ERAPULUS_GOOGLE_CLIENT_ID}
+
+## Azure Storage
+azure.storage.account-name=${AZURE_ACCOUNT_NAME}
+azure.storage.account-key=${AZURE_ACCOUNT_KEY}
+azure.storage.container-name=${AZURE_CONTAINER_NAME}
 
 # Administrator data
 erapulus.administrator.firstName=${ADMIN_FIRST_NAME}
