Update Spring version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ ADMIN_PASSWORD=pass
 server.port=${SERVER_PORT}
 
 # R2DBC setup
-spring.r2dbc.url=r2dbc:pool:mssql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.r2dbc.url=r2dbc:pool:mssql://${DB_HOST}:${DB_PORT}/${DB_NAME}?maxLifeTime=PT0.3S
 spring.r2dbc.username=${DB_USER}
 spring.r2dbc.password=${DB_PASSWORD}
 spring.main.web-application-type=reactive
