Add custom OpenApi Configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,3 +57,5 @@ erapulus.administrator.password=${ADMIN_PASSWORD}
 
 # Swagger documentation
 springdoc.swagger-ui.path=/documentation.html
+spring.application.name=Erapulus
+spring.application.version=1.0.0
