--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-spring.r2dbc.url=r2dbc:h2:mem:///erasmus?options=DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.r2dbc.url=r2dbc:h2:mem:///erasmus?options=DB_CLOSE_DELAY=-1&DB_CLOSE_ON_EXIT=FALSE&MODE=MSSQLServer
 spring.r2dbc.username=sa
 spring.r2dbc.password=Q1W2e3r4
 spring.main.web-application-type=reactive
@@ -18,3 +18,5 @@ erapulus.administrator.password=Q1W2e3r4
 azure.storage.account-name=example
 azure.storage.account-key=secret-key
 azure.storage.container-name=example
+spring.application.name=Erapulus
+spring.application.version=1.0.0
