Add README and update API documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+###############################
+### ENVIRONMENTAL VARIABLES ###
+###############################
+
 # Application properties
 SERVER_PORT=8080
 
@@ -24,6 +28,11 @@ ADMIN_LAST_NAME=Smith
 ADMIN_EMAIL=example@gmail.com
 ADMIN_PASSWORD=pass
 
+
+
+#########################
+### STATIC PROPERTIES ###
+#########################
 
 # Application properties
 server.port=${SERVER_PORT}
